[gd_scene load_steps=14 format=3 uid="uid://cgosusbqw7ioc"]

[ext_resource type="Script" uid="uid://dsbfpqpdpe6qm" path="res://prefabs/enemies/imp/enemy_imp.gd" id="1_vqrmm"]
[ext_resource type="PackedScene" uid="uid://s1lydyxgqx5w" path="res://prefabs/objects/imp_trap/enemy_trap.tscn" id="2_5fimp"]
[ext_resource type="PackedScene" uid="uid://dex8weqw7t7ft" path="res://prefabs/objects/imp_fireball/fireball.tscn" id="3_e782i"]
[ext_resource type="PackedScene" uid="uid://bsubb1a08d328" path="res://prefabs/enemies/imp/imp_model.tscn" id="4_vqrmm"]
[ext_resource type="Texture2D" uid="uid://r2cl1qgna2v5" path="res://sprites/blood_decals/blood_decal_0.png" id="5_5fimp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jhx03"]
radius = 0.6
height = 2.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yfjof"]
height = 10.0

[sub_resource type="ViewportTexture" id="ViewportTexture_a7d0n"]
viewport_path = NodePath("subviewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7d0n"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aivmq"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 1, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e782i"]
particle_flag_align_y = true
angle_min = 30.0
angle_max = 60.0
direction = Vector3(0, 1, -1)
initial_velocity_min = 3.0
initial_velocity_max = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iwu4i"]
albedo_texture = ExtResource("5_5fimp")

[sub_resource type="CylinderMesh" id="CylinderMesh_6gtxi"]
material = SubResource("StandardMaterial3D_iwu4i")
top_radius = 0.01
bottom_radius = 0.0
height = 0.05

[node name="enemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 64
collision_mask = 33
script = ExtResource("1_vqrmm")
prefabtrap = ExtResource("2_5fimp")
prefabfireball = ExtResource("3_e782i")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_jhx03")

[node name="area_seeing" type="Area3D" parent="."]
collision_layer = 2048
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="area_seeing"]
shape = SubResource("CylinderShape3D_yfjof")

[node name="timer_throw" type="Timer" parent="."]
one_shot = true

[node name="sprite_status" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12925, 0)
billboard = 1
no_depth_test = true
texture_filter = 0
texture = SubResource("ViewportTexture_a7d0n")

[node name="subviewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(128, 48)

[node name="hboxcontainer_status" type="HBoxContainer" parent="subviewport"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_constants/separation = 0
alignment = 1

[node name="progressbar_health" type="ProgressBar" parent="subviewport"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -16.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_a7d0n")
theme_override_styles/fill = SubResource("StyleBoxFlat_aivmq")
show_percentage = false

[node name="imp_model" parent="." instance=ExtResource("4_vqrmm")]
transform = Transform3D(-0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, -0.0355282, -1.25659, 0)

[node name="blood_spot" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.157623, -0.00292969)
visible = false
size = Vector3(1, 0.5, 1)
texture_albedo = ExtResource("5_5fimp")

[node name="blood_drop" type="GPUParticles3D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_e782i")
draw_pass_1 = SubResource("CylinderMesh_6gtxi")

[connection signal="timeout" from="timer_throw" to="." method="_on_timer_throw_timeout"]
